[package]
name = "my_redis"
version = "0.1.0"
authors = ["074bct517.kundan@pcampus.edu.np"]
edition = "2021"

[[bin]]
name = "my_redis"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
